[gd_scene load_steps=2 format=3 uid="uid://bftm100157sqb"]

[ext_resource type="Script" uid="uid://bnpgutptefwo6" path="res://addons/oasis_dialogue/dialogue_unit/dialogue_unit.gd" id="1_bqk2i"]

[node name="DialogueUnit" type="HBoxContainer"]
offset_right = 404.0
offset_bottom = 35.0
size_flags_horizontal = 4
script = ExtResource("1_bqk2i")

[node name="Conditions" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="AddCondition" type="Button" parent="Conditions"]
unique_name_in_owner = true
layout_mode = 2
text = "add"

[node name="Text" type="TextEdit" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
placeholder_text = "insert text here..."
wrap_mode = 1
scroll_fit_content_height = true

[node name="Actions" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="AddAction" type="Button" parent="Actions"]
unique_name_in_owner = true
layout_mode = 2
text = "add"

[connection signal="button_up" from="Conditions/AddCondition" to="." method="_on_add_condition_button_up"]
[connection signal="button_up" from="Actions/AddAction" to="." method="_on_add_action_button_up"]
